sandbox/output
QualityAndSellInCalculator.java:25: error: cannot find symbol
            if (items[i].quality < 50) {
                ^
  symbol: variable items
QualityAndSellInCalculator.java:25: error: cannot find symbol
            if (items[i].quality < 50) {
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:26: error: cannot find symbol
                items[i].quality += 1;
                ^
  symbol: variable items
QualityAndSellInCalculator.java:26: error: cannot find symbol
                items[i].quality += 1;
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:28: error: cannot find symbol
                if (items[i].sellIn < 11) {
                    ^
  symbol: variable items
QualityAndSellInCalculator.java:28: error: cannot find symbol
                if (items[i].sellIn < 11) {
                          ^
  symbol: variable i
QualityAndSellInCalculator.java:29: error: cannot find symbol
                    if (items[i].quality < 50) {
                        ^
  symbol: variable items
QualityAndSellInCalculator.java:29: error: cannot find symbol
                    if (items[i].quality < 50) {
                              ^
  symbol: variable i
QualityAndSellInCalculator.java:30: error: cannot find symbol
                        items[i].quality += 1;
                        ^
  symbol: variable items
QualityAndSellInCalculator.java:30: error: cannot find symbol
                        items[i].quality += 1;
                              ^
  symbol: variable i
QualityAndSellInCalculator.java:34: error: cannot find symbol
                if (items[i].sellIn < 6) {
                    ^
  symbol: variable items
QualityAndSellInCalculator.java:34: error: cannot find symbol
                if (items[i].sellIn < 6) {
                          ^
  symbol: variable i
QualityAndSellInCalculator.java:35: error: cannot find symbol
                    if (items[i].quality < 50) {
                        ^
  symbol: variable items
QualityAndSellInCalculator.java:35: error: cannot find symbol
                    if (items[i].quality < 50) {
                              ^
  symbol: variable i
QualityAndSellInCalculator.java:36: error: cannot find symbol
                        items[i].quality += 1;
                        ^
  symbol: variable items
QualityAndSellInCalculator.java:36: error: cannot find symbol
                        items[i].quality += 1;
                              ^
  symbol: variable i
QualityAndSellInCalculator.java:41: error: cannot find symbol
            items[i].sellIn -= 1;
            ^
  symbol: variable items
QualityAndSellInCalculator.java:41: error: cannot find symbol
            items[i].sellIn -= 1;
                  ^
  symbol: variable i
QualityAndSellInCalculator.java:43: error: cannot find symbol
            if (items[i].sellIn < 0) {
                ^
  symbol: variable items
QualityAndSellInCalculator.java:43: error: cannot find symbol
            if (items[i].sellIn < 0) {
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:44: error: cannot find symbol
                items[i].quality = 0;
                ^
  symbol: variable items
QualityAndSellInCalculator.java:44: error: cannot find symbol
                items[i].quality = 0;
                      ^
  symbol: variable i
22 errors
Error: Could not find or load main class TexttestFixture
